# ros_basics_control

./: CMakeLists.txt  package.xml
include/ros_basics_control/: controller_base.hpp  gazebo_robot_tracker.h  robot_tracker.h  thymio.hpp  thymio_interface_base.h  thymio_simu_interface.h
launch/: real_thymio.launch  simu_thymio.launch  simu_thymio_avoidance.launch
src/: gazebo_robot_tracker.cpp  robot_tracker.cpp  thymio_ctrl_node.cpp  thymio_interface_base.cpp  thymio_intf_node.py  thymio_simu_interface.cpp  thymio_simu_node.cpp
